# microstructures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conda.yml
.github/workflows/: continuous.yml
cmake/: FindDlib.cmake  FindKnitro.cmake  FindLIBIGL.cmake  FindNLopt.cmake  FindVCGlib.cmake  MicroDependencies.cmake  MicroDownloadExternal.cmake  MicroUtils.cmake
docs/: faq.md  notes.md  usage.md
src/lib/: CMakeLists.txt
src/lib/inflators/: CMakeLists.txt  Inflator.hh  MakeInflator.cc  MakeInflator.hh  ParameterConstraint.hh  rref.h
src/lib/inflators/wrappers/: BoundaryPerturbationInflator.cc  BoundaryPerturbationInflator.hh  EqualityConstrainedInflator.cc  EqualityConstrainedInflator.hh  IsoinflatorWrapper.cc  IsoinflatorWrapper.hh  JamesInflatorWrapper.cc  JamesInflatorWrapper.hh  LpHoleInflator.hh  LuigiInflatorWrapper.cc  LuigiInflatorWrapper.hh
src/lib/isosurface_inflator/: AABBTree.cc  AABBTree.hh  AutomaticDifferentiation.hh  BilinearMap.hh  BoxIntersection1DFeatures.hh  BoxIntersectionMesher.cc  BoxIntersectionMesher.hh  CGALClippedVolumeMesher.cc  CGALClippedVolumeMesher.hh  CMakeLists.txt  ConvexHullTriangulation.cc  ConvexHullTriangulation.hh  DisableWarnings.hh  DynamicKdTree.cc  DynamicKdTree.hh  EnableWarnings.hh  FuzzySign.hh  GraphLineMesher.cc  GraphLineMesher.hh  IGLSurfaceMesherMC.cc  IGLSurfaceMesherMC.hh  InflatorTypes.hh  Isometries.hh  IsosurfaceInflator.cc  IsosurfaceInflator.hh  IsosurfaceInflatorConfig.hh  IsosurfaceInflatorImpl.hh  Joint.hh  MesherBase.hh  MeshingOptions.cc  MeshingOptions.hh  MidplaneMesher.cc  MidplaneMesher.hh  NodePositioners.hh  PaperVisualizationSDFunc.hh  PatternSignedDistance.hh  PostProcess.cc  PostProcess.hh  ShapeVelocityInterpolator.hh  SignedDistance.hh  (+19 more)
src/lib/isosurface_inflator/MarchingSquares/: AdaptiveEvaluator.hh  Grid.hh  MarchingSquaresStitch.hh
src/lib/isosurface_inflator/quadfoam/: instantiate.cpp  instantiate.h  jacobians.cpp  jacobians.h  navigation.cpp  navigation.h
src/lib/luigi_wire_inflator/src/: EdgeMeshPattern.h  EdgeMeshType.h  EdgeMeshUtils.h  EigenTypes.h  InflatorParameters.h  OutMesh.h  Pattern2D.h  PolyMeshType.h  PolyMeshUtils.h  TriMeshType.h  WireInflator2D.h  WireInflator2DFacade.cpp  WireInflator2DFacade.h  WireMesh2D.h  WireMeshEmbedding.h  clipperHelper.h  edge_hash.h  mshLoader.h  tessellator2d.h
src/lib/optimizers/: BoundConstraints.hh  CMakeLists.txt  Constraint.hh  EvaluatedConstraint.hh  EvaluatedObjectiveTerm.hh  IterateBase.hh  IterateManagerBase.hh  OptimizerConfig.hh
src/lib/optimizers/wrappers/: ceres.cc  ceres.hh  dlib.cc  dlib.hh  gradient_descent.cc  gradient_descent.hh  knitro.cc  knitro.hh  nlopt.cc  nlopt.hh
src/lib/pattern_optimization/: BaseCellOperations.hh  BoundaryPerturbationInflatorRemesher.hh  CMakeLists.txt  IterateFactory.hh  IterateManager.hh  LookupTable.hh  ObjectiveTerm.hh  ObjectiveTermNormalizations.hh  PatternOptimizationConfig.hh  PatternOptimizationIterate.hh  PatternOptimizationJob.cc  PatternOptimizationJob.hh  SDConversions.hh  SDConversionsOrthoCell.hh  ShapeVelocityInterpolatorOrthoCell.hh  default_job.opt  default_job_3D.opt  default_job_isoinflator.opt
src/lib/pattern_optimization/constraints/: Printability.hh  TensorFit.hh
src/lib/pattern_optimization/objective_terms/: IsotropicFit.hh  IsotropicFitRel.hh  PeriodicSmoothingRegularization.hh  ProximityRegularization.hh  ScaleInvariantSmoothingRegularization.hh  SmoothingRegularization.hh  TargetVolume.hh  TensorFit.hh
tests/: CMakeLists.txt  README.md  test_aabb.cc  test_bilinear.cc  test_common.cc  test_common.hh  test_inflation.cc  test_isosurfacejob.cc  test_stitching.cc
tools/3d_topology_sweep/: Default.material  coarser_3d_meshing_opts.opt  finer_3d_meshing_opts.opt  range_file.txt  sweep.py
tools/slice_supporter/: RemoveUnsupported.cc  SliceSupporter.cc  build.sh  extract_foundation_and_support_geom.sh  run.sh
